--- a/static/css/style.css
+++ b/static/css/style.css
@@ -13,7 +13,10 @@ div#container{
 	border:1px solid white;
 	overflow: hidden;
 }
-hr{margin-top:10px;}
+hr{
+	margin-top:10px;
+  margin-bottom:5px;
+}
 ol{margin-bottom: 4px;}
 li{margin-left:30px;}
 p{margin-bottom:4px;}
@@ -37,4 +40,3 @@ div>a{
 	border: 2px solid;
 	border-radius: 2px;
 }
-hr{margin-bottom:5px;}
